Полудоделал форм таблет версию и каталог таблет версию

--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -80,6 +80,10 @@
   margin-bottom: 61px;
 }
 
+.additional-goods__green-background svg {
+  margin-bottom: 64px;
+}
+
 .additional-goods__green-background-text {
   font-size: 16px;
   line-height: 20px;
@@ -88,3 +92,137 @@
   max-width: 160px;
   text-align: center;
 }
+@media (min-width:@mobile){
+  .additional-goods__tablet-show {
+    display: none;
+  }
+}
+
+@media(min-width:@tablet) {
+
+  .additional-goods_header-line-tablet-show {
+    display: block;
+    width: 28px;
+    height: 3px;
+    background-color: #68b738;
+    margin-left: -4px;
+    margin-top: 14px;
+}
+
+  .additional-goods__article {
+    max-width: 653px;
+    border-left: 0;
+    border-right: 0;
+    border-left: 1px solid #cdcdcd;
+    border-right: 1px solid #cdcdcd;
+  }
+
+  .additional-goods__header-sub-span {
+    margin-left: 38px;
+    font-size: 36px;
+    line-height: 36px;
+    margin-top: 2px;
+}
+
+  .additional-goods__header {
+    padding-left: 0;
+    margin-bottom: 42px;
+  }
+
+  .additional-goods_header-right-line {
+    height: 3px;
+    background-color: #68b738;
+    width: 326px;
+    margin-top: 14px;
+    margin-left: 37px;
+}
+.additional-goods__article-main-text {
+  .additional-goods__article-main-text {
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+    padding-left: 36px;
+    max-width: 574px;
+    justify-content: space-between;
+}
+}
+
+.additional-goods__article-header {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.additional-goods__article-content {
+  margin-top: 8px;
+}
+.additional-goods__article-how-many-weight {
+  margin-right: 47px;
+  letter-spacing: 0.37px;
+}
+.additional-goods__article-order {
+  max-width: 575px;
+    margin-left: 36px;
+    padding-right: 119px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+.additional-goods__article-main-text {
+  display: flex;
+  align-items: center;
+}
+.additional-goods__article-main-text {
+  padding-top: 10px;
+  margin-left: 36px;
+  padding-top: 10px;
+    margin-left: 36px;
+    width: 575px;
+    justify-content: space-between;
+}
+.additional-goods__article-last-child {
+  border-bottom: 1px solid #cdcdcd;
+}
+
+.additional-goods__green-background {
+  display: flex;
+  max-width: 642px;
+  margin: 0 auto;
+  flex-direction: row;
+  margin-top: 63px;
+  margin-left: 28px;
+  padding-bottom: 61px;
+}
+
+
+.additional-goods__green-background svg {
+  margin-bottom: 0;
+}
+
+.additional-goods__green-background svg {
+  margin-bottom: 0;
+  margin-left: 79px;
+  margin-top: -12px;
+}
+
+.additional-goods__green-background svg {
+  margin-bottom: 0;
+  margin-left: 79px;
+  margin-top: -12px;
+}
+
+.additional-goods__green-background-text {
+  font-size: 16px;
+  line-height: 19px;
+  font-family: "Arial-Regular", sans-serif;
+  color: #ffffff;
+  max-width: 149px;
+  text-align: center;
+  margin-left: 249px;
+  text-align: left;
+}
+
+}
+
+
+
