--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -31,6 +31,8 @@
 .live-example__numbers {
   display: flex;
   margin-bottom: 19px;
+  max-width: 280px;
+  justify-content: space-between;
 }
 
 .live-example__numbers-sub {
@@ -38,6 +40,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
+
 }
 
 .live-example__numbers-sub:first-child {
@@ -69,6 +72,9 @@
   color: #444444;
   font-family: "Arial-Regular", sans-serif;
   max-width: 55px;
+  background-color: #f2f2f2;
+  padding-left: 16px;
+  padding-right: 18px;
 }
 
 .live-example__price {
@@ -77,6 +83,7 @@
   font-size: 14px;
   line-height: 20px;
   text-align: center;
+  padding-left: 4px;
 }
 
 .live-example__slider {
@@ -99,7 +106,6 @@
     flex-direction: column;
     align-items: center;
     width: 45.65%;
-    margin-right: 32px;
 }
 
 .live-example__numbers-sub:last-child {
