--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -1,3 +1,6 @@
+@mobile: 320px;
+@tablet: 768px;
+
 .find-all-goods {
   display: flex;
   flex-direction: column;
@@ -40,4 +43,51 @@
   line-height: 16px;
   font-family: "Arial-Regular", sans-serif;
   margin-bottom: 21px;
+}
+
+@media (min-width:@tablet) {
+  .find-all-goods {
+    padding-right: -1px;
+    max-width: 327px;
+    padding-top: 56px;
+    background-color: inherit;
+    padding-bottom: 6px;
+    border-top: 0;
+    margin: 0;
+}
+  .find-all-goods__plus-mobile-img {
+    margin-top: 13px;
+    margin-bottom: 66px;
+  }
+  .find-all-goods__show-additional-goods {
+    max-width: 142px;
+    margin-left: 3px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 20px;
+  }
+  .find-all-goods__more-tastes {
+    max-width: 167px;
+    text-align: center;
+    font-size: 16px;
+    margin-top: 19px;
+    margin-left: -1px;
+    line-height: 18px;
+  }
+  .find-all-goods__show-all-goods {
+    max-width: 313px;
+    margin-top: 65px;
+    padding: 9px 80px 9px 80px;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 35px;
+  }
+  .find-all-goods__show-all-goods {
+    max-width: 269px;
+    margin-top: 64px;
+    padding: 9px 78px 9px 78px;
+    font-size: 16px;
+    margin-bottom: 35px;
+}
+
 }
