--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,3 +1,6 @@
+@mobile: 320px;
+@tablet: 768px;
+
 .footer {
   background-color: #f2f2f2;
   display: flex;
@@ -26,7 +29,7 @@
 .footer__social-links {
   display: flex;
   padding-left: 26px;
-  margin-bottom: 16px;
+  margin-bottom: 18px;
   margin-top: 22px;
   align-items: center;
 
@@ -72,3 +75,27 @@
 .footer__footer-logo-index {
   padding-bottom: 27px;
 }
+
+
+@media (min-width:@tablet){
+.footer {
+  max-width: 768px;
+  margin: 0 auto;
+}
+.footer__logo {
+  border: 0;
+}
+.footer__footer-content {
+  max-width: 708px;
+  margin: 0 auto;
+  flex-direction: row;
+}
+.footer__footer-logo {
+  padding-bottom: 0;
+}
+.footer__right-logo {
+  padding-top: 0;
+  border: 0;
+}
+}
+
