--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -1,14 +1,86 @@
 @white: #fff;
+@font-face {
+  font-family: 'fontello';
+  src: url('../font/fontello.eot?11710255');
+  src: url('../font/fontello.eot?11710255#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?11710255') format('woff2'),
+       url('../font/fontello.woff?11710255') format('woff'),
+       url('../font/fontello.ttf?11710255') format('truetype'),
+       url('../font/fontello.svg?11710255#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?11710255#fontello') format('svg');
+  }
+}
+*/
 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-check-empty:before { content: '\f096'; } /* 'п‚–' */
 .header-background {
-  background-color: #65a93c;
+  /*background-color: #65a93c;
   background-image: url("../img/index-background-mobile.png");
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;*/
   padding: 29px 0 0 0;
   text-align: center;
   display: flex;
   flex-direction: column;
   position: relative;
+}
+
+.header-background::after {
+content: "";
+display: block;
+width: 100%;
+height: 305px;
+position: absolute;
+top: 0;
+left: 0;
+background-color: rgb(101, 169, 60);
+background-image: url("../img/index-background-mobile.png");
+z-index: -1;
+background-position: 50% center;
+background-repeat: no-repeat;
 }
 
 .header-background__main-words {
@@ -46,11 +118,12 @@
   color: @white;
   background-color: #68b738;
   text-decoration: none;
-  width: 100%;
   padding: 10px 0 11px 0;
   display: flex;
   justify-content: center;
   text-transform: uppercase;
+  max-width: 280px;
+  margin: 0 auto;
 }
 
 .header-background__img {
