--- a/source/less/map.less
+++ b/source/less/map.less
@@ -1,3 +1,14 @@
+@mobile: 320px;
+@tablet: 768px;
+
 .map__iframe {
   width: 100%;
 }
+
+@media (min-width:@tablet) {
+  .map {
+    width: 698px;
+    height: 389px;
+}
+}
+
