закончил таблет версию форм штмл и каталог штмл

--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -110,11 +110,13 @@
 }
 
   .additional-goods__article {
-    max-width: 653px;
+    max-width: 706px;
+    margin-left: 27px;
     border-left: 0;
     border-right: 0;
     border-left: 1px solid #cdcdcd;
     border-right: 1px solid #cdcdcd;
+    padding-bottom: 4px;
   }
 
   .additional-goods__header-sub-span {
@@ -126,7 +128,7 @@
 
   .additional-goods__header {
     padding-left: 0;
-    margin-bottom: 42px;
+    margin-bottom: 48px;
   }
 
   .additional-goods_header-right-line {
@@ -137,36 +139,39 @@
     margin-left: 37px;
 }
 .additional-goods__article-main-text {
-  .additional-goods__article-main-text {
     display: flex;
     align-items: center;
     padding-top: 10px;
-    padding-left: 36px;
-    max-width: 574px;
     justify-content: space-between;
-}
+
 }
 
+
 .additional-goods__article-header {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
+  line-height: 20px;
 }
 
 .additional-goods__article-content {
-  margin-top: 8px;
+  margin-top: 11px;
+    font-size: 16px;
+    line-height: 20px;
 }
 .additional-goods__article-how-many-weight {
-  margin-right: 47px;
-  letter-spacing: 0.37px;
+  margin-right: 52px;
 }
 .additional-goods__article-order {
-  max-width: 575px;
-    margin-left: 36px;
-    padding-right: 119px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    font-size: 14px;
-    margin-bottom: 25px;
+  max-width: 633px;
+  margin-left: 36px;
+  padding-right: 119px;
+  padding-top: 10px;
+  padding-bottom: 8px;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 25px;
+  margin-top: 17px;
+  padding-left: 117px;
 }
 .additional-goods__article-main-text {
   display: flex;
@@ -174,11 +179,8 @@
 }
 .additional-goods__article-main-text {
   padding-top: 10px;
-  margin-left: 36px;
   padding-top: 10px;
-    margin-left: 36px;
-    width: 575px;
-    justify-content: space-between;
+  justify-content: space-between;
 }
 .additional-goods__article-last-child {
   border-bottom: 1px solid #cdcdcd;
@@ -186,12 +188,12 @@
 
 .additional-goods__green-background {
   display: flex;
-  max-width: 642px;
+  max-width: 707px;
   margin: 0 auto;
   flex-direction: row;
-  margin-top: 63px;
-  margin-left: 28px;
-  padding-bottom: 61px;
+  margin-top: 68px;
+  margin-left: 27px;
+  padding-bottom: 68px;
 }
 
 
@@ -207,8 +209,8 @@
 
 .additional-goods__green-background svg {
   margin-bottom: 0;
-  margin-left: 79px;
-  margin-top: -12px;
+  margin-left: 89px;
+  margin-top: -3px;
 }
 
 .additional-goods__green-background-text {
@@ -217,11 +219,17 @@
   font-family: "Arial-Regular", sans-serif;
   color: #ffffff;
   max-width: 149px;
-  text-align: center;
-  margin-left: 249px;
+  margin-left: 278px;
   text-align: left;
+  margin-top: 9px;
 }
-
+.additional-goods__article-main-text{
+  max-width: 631px;
+  margin-left: 37px;
+}
+.additional-goods__article-five-litres {
+  margin-right: 60px;
+}
 }
 
 
