--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -40,33 +40,44 @@
 
 @media (min-width:@tablet) {
   .communicating-form {
-    max-width: 698px;
-    margin-top: 69px;
+    width: 768px;
+    margin-top: 77px;
     background-color: #f2f2f2;
+    margin-left: -3px;
 }
 .communicating__main-text {
   max-width: 700px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .communicating__offer-communicating {
-  margin-top: 32px;
-    font-size: 18px;
-    line-height: 23px;
-    margin-left: 64px;
-    max-width: 190px;
+  margin-top: 38px;
+  font-size: 20px;
+  line-height: 25px;
+  margin-left: 36px;
+  max-width: 190px;
 }
 .communicating__address {
   text-align: right;
-  margin-right: 66px;
-  margin-top: 29px;
+  margin-right: 39px;
+  margin-top: 35px;
   line-height: 19px;
+  font-size: 16px;
+  line-height: 20px;
+  max-width: 185px;
 }
 .communicating__address-city {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
-  margin-top: 16px;
-  letter-spacing: 0.2px;
+  margin-top: 20px;
 }
 }
