--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -54,6 +54,7 @@
     padding-bottom: 6px;
     border-top: 0;
     margin: 0;
+    margin-right: 11px;
 }
   .find-all-goods__plus-mobile-img {
     margin-top: 13px;
